tests-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0232/input.js
function hello() { "use strict"; var let; }
